Enable WebSocket support

--- a/src/java/winstone/LocalStrings.properties
+++ b/src/java/winstone/LocalStrings.properties
@@ -65,6 +65,7 @@ Launcher.EmbeddedWebroot=winstoneEmbeddedWAR
 Launcher.CopyingEmbeddedWarfile=Extracting embedded warfile to [#0]
 Launcher.NeedsJDK14=Listener class [#0] needs JDK1.4 support. Disabling
 Launcher.ContainerStartupError=Container startup failed
+Launcher.WebsocketInit=Initialising websocket support on [#0]
 
 # Keep synchronized with jenkinsci/extras-executable-war/src/main/java/Main.java
 Launcher.UsageInstructions.Header=[#0], (c) 2003-2006 Rick Knowles\n\
