--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,11 @@
       <artifactId>spdy-http-server</artifactId>
       <version>${jetty.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.eclipse.jetty.websocket</groupId>
+      <artifactId>javax-websocket-server-impl</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
   </dependencies>
 
   <properties>
